Expanded on setup from scratch for DF 0.44.3

--- a/Quickfort/config/state.ini
+++ b/Quickfort/config/state.ini
@@ -1,5 +1,5 @@
 [GUI]
-PlaybackMode=macro
+PlaybackMode=key
 ShowFullTip=1
-LastFolder=F:\Copy\Public\Pakas\DF Latest (40.24)\Blueprints
+LastFolder=C:\Users\Inc\Desktop
 DoMacroMSCheck=1
